freshed-rs-macros/tests/ui/fail/html_async_in_missing_context.rs
use freshed_rs_macros::html_async_ctx;

fn main() {
    let _ = html_async_ctx!(<div>oops</div>);
}
